[gd_scene load_steps=16 format=3 uid="uid://cwq5lpo80io0d"]

[ext_resource type="Texture2D" uid="uid://dkfnjychc24ah" path="res://assets/img/default/banner.png" id="1_gtc0v"]
[ext_resource type="Script" path="res://scenes/home/banner_list/game_banner.gd" id="1_spqyp"]
[ext_resource type="Material" path="res://themes/highlight.tres" id="3_gxj7a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkuvb"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.96, 0.96, 0.96, 1)

[sub_resource type="Theme" id="Theme_rsxnt"]
Panel/styles/panel = SubResource("StyleBoxFlat_bkuvb")

[sub_resource type="Animation" id="Animation_a6w6v"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:custom_minimum_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:custom_minimum_size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect/ColorRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_guf86"]
resource_name = "focus_entered"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0, 60, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, -0.15, 0, 0.15, 0, 60, -0.15, 0, 0.15, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_5vlg0"]
resource_name = "hide_tags"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, 0, 0, 0, -200, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(200, 0, 0, 0, -200, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="Animation" id="Animation_p1bai"]
resource_name = "show_tags"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BottomLabel:custom_minimum_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.15, 200, 200, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopLabel:custom_minimum_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, 0, 0, 0.15, 200, 200, 0, 0, 0, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1yxky"]
_data = {
"RESET": SubResource("Animation_a6w6v"),
"focus_entered": SubResource("Animation_guf86"),
"hide_tags": SubResource("Animation_5vlg0"),
"show_tags": SubResource("Animation_p1bai")
}

[sub_resource type="Animation" id="Animation_vws6v"]
resource_name = "fade_out"
length = 4.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -40, -0.4, 45, 0.25, 0),
"times": PackedFloat32Array(0, 4)
}

[sub_resource type="Animation" id="Animation_0isxn"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-40, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_agg83"]
resource_name = "fade_in"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-40, -0.25, 0, 0.251406, 49, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_r4gu1"]
resource_name = "fast_fade_out"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.133333, -35, -40, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rs6oc"]
_data = {
"RESET": SubResource("Animation_0isxn"),
"fade_in": SubResource("Animation_agg83"),
"fade_out": SubResource("Animation_vws6v"),
"fast_fade_out": SubResource("Animation_r4gu1")
}

[node name="GameBanner" type="VBoxContainer"]
offset_right = 31.0
offset_bottom = 127.0
theme_override_constants/separation = 0
script = ExtResource("1_spqyp")

[node name="TopLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
texture = ExtResource("1_gtc0v")
expand_mode = 3
stretch_mode = 6

[node name="SelectionRect" type="Panel" parent="TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_rsxnt")

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
visible = false
material = ExtResource("3_gxj7a")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomLabel" type="Label" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1yxky")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -40.0

[node name="MaxThemeLength" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="AudioStreamAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rs6oc")
}

[connection signal="focus_entered" from="TextureRect" to="." method="_on_texture_rect_focus_entered"]
[connection signal="focus_exited" from="TextureRect" to="." method="_on_texture_rect_focus_exited"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="MaxThemeLength" to="." method="_on_max_theme_length_timeout"]
[connection signal="animation_finished" from="AudioStreamAnimation" to="." method="_on_audio_stream_animation_animation_finished"]
